Arrumando a tabela finalmente

--- a/index.html
+++ b/index.html
@@ -34,15 +34,22 @@
         <br>
         <p>Esse negócio de tabela precisava ser melhor explicado, inserir linha e coluna não ficou muito claro
             de como fazer, eu coloquei a coluna e na hora de incluir uma linha abaixo nadinha funcionou...
-            Total noob
+            Total noob<br>
+            Alguns meses depois e finalmente entendi como arrumar a tabela!! ;)
         </p>
-        <table>
-            <td>
+        <table border="2" align="center">
+            <tr>
                 <th>Título</th>
-            </td> 
-            <td>
                 <th>Informação</th>
-            </td>
+            </tr>
+            <tr>
+                <td>Física 1: mecânica</td>
+                <td>Livro de física escrito por Hugh D. Young e Roger A. Freedman</td>
+            </tr>
+            <tr>
+                <td>Cálculo: volume 1</td>
+                <td>Livro de matemática escrito por James Stewart</td>
+            </tr>
         </table>
         <br>
         <p>Ok! Vou tentar colocar um vídeo, essa eu não vi nem na DIO, então meio que será no tato</p>
